Fix static mesh collision

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,7 +5,7 @@ GameDefaultMap=/Game/Maps/LeoRoverDefault.LeoRoverDefault
 
 
 EditorStartupMap=/Game/Maps/LeoRoverDefault.LeoRoverDefault
-GlobalDefaultGameMode=/Script/LeoRover.LeoRoverGameModeBase
+GlobalDefaultGameMode=/Script/Engine.GameModeBase
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
