Fix BP for preview1 release

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,11 +1,11 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/LeoRoverDefault.LeoRoverDefault
+GameDefaultMap=/Game/Maps/LeoRoverArena.LeoRoverArena
 
 
-EditorStartupMap=/Game/Maps/LeoRoverDefault.LeoRoverDefault
-GlobalDefaultGameMode=/Script/Engine.GameModeBase
+EditorStartupMap=/Game/Maps/LeoRoverArena.LeoRoverArena
+GlobalDefaultGameMode=/Script/LeoRover.LeoRoverGameModeBase
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -26,4 +26,7 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/LeoRover")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/LeoRover")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="LeoRoverGameModeBase")
+
+[/Script/Engine.PhysicsSettings]
+bSubstepping=False
 
