Update Unreal Engine version to 5.0.0

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,16 +2,16 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/LeoRoverArena.LeoRoverArena
-
-
 EditorStartupMap=/Game/Maps/LeoRoverArena.LeoRoverArena
-GlobalDefaultGameMode=/Script/LeoRover.LeoRoverGameModeBase
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
+
+[/Script/WindowsTargetPlatform.WindowsTargetSettings]
+DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
 
 [/Script/Engine.RendererSettings]
 r.GenerateMeshDistanceFields=True
@@ -23,10 +23,21 @@ r.Shadow.Virtual.Enable=1
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 
 [/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/LeoRover")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/LeoRover")
-+ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="LeoRoverGameModeBase")
++ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/LeoRoverUE5")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/LeoRoverUE5")
++ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="LeoRoverUE5GameModeBase")
 
-[/Script/Engine.PhysicsSettings]
-bSubstepping=False
+[/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
+bEnablePlugin=True
+bAllowNetworkConnection=True
+SecurityToken=19DCBCE1463145A8B6279E632804E7A2
+bIncludeInShipping=False
+bAllowExternalStartInShipping=False
+bCompileAFSProject=False
+bUseCompression=False
+bLogFiles=False
+bReportStats=False
+ConnectionType=USBOnly
+bUseManualIPAddress=False
+ManualIPAddress=
 
