--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -74,11 +74,11 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+ActionMappings=(ActionName="Brake",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=S)
-+AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
-+AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=X)
-+AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
-+AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
++ActionMappings=(ActionName="Brake",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=K)
++AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=I)
++AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=Comma)
++AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=L)
++AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=J)
 +AxisMappings=(AxisName="LookUp",Scale=1.000000,Key=MouseY)
 +AxisMappings=(AxisName="LookRight",Scale=1.000000,Key=MouseX)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
