--- a/LeoRoverUE5.uproject
+++ b/LeoRoverUE5.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{6F9089E1-1AA8-4BE5-867E-58E2303C38D1}",
+	"EngineAssociation": "5.0",
 	"Category": "",
 	"Description": "",
 	"Modules": [
