--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/LeoRoverArena.LeoRoverArena
-EditorStartupMap=/Game/Maps/LeoRoverArena.LeoRoverArena
+GameDefaultMap=/Game/Maps/PhysicsArena.PhysicsArena
+EditorStartupMap=/Game/Maps/PhysicsArena.PhysicsArena
+GlobalDefaultGameMode=/Script/Engine.GameMode
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
