--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -76,13 +76,17 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+ActionMappings=(ActionName="Brake",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=K)
-+AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=I)
-+AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=Comma)
-+AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=L)
-+AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=J)
++ActionMappings=(ActionName="Brake",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=S)
++AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=X)
++AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="LookUp",Scale=1.000000,Key=MouseY)
 +AxisMappings=(AxisName="LookRight",Scale=1.000000,Key=MouseX)
++AxisMappings=(AxisName="ForwardSpeedUp",Scale=1.000000,Key=U)
++AxisMappings=(AxisName="TurnSpeedUp",Scale=1.000000,Key=Y)
++AxisMappings=(AxisName="ForwardSpeedUp",Scale=-1.000000,Key=J)
++AxisMappings=(AxisName="TurnSpeedUp",Scale=-1.000000,Key=H)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
