Add image generator on robot

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,10 @@
 /LeoRoverUE5.code-workspace
 /LeoRoverUE5.sln
 
-Content/StarterContent/ 
+Content/StarterContent/
+Content/MSPresets/
+Content/Megascans/
+
 Binaries/
 DerivedDataCache/
 Intermediate/
