--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -45,6 +45,7 @@ r.GenerateMeshDistanceFields=True
 r.DynamicGlobalIlluminationMethod=1
 r.ReflectionMethod=1
 r.Shadow.Virtual.Enable=1
+r.AllowGlobalClipPlane=True
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
@@ -53,6 +54,7 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/LeoRoverUE5")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/LeoRoverUE5")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="LeoRoverUE5GameModeBase")
+NearClipPlane=1.000000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
