Fix rover control

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -87,10 +87,10 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="LookUp",Scale=1.000000,Key=MouseY)
 +AxisMappings=(AxisName="LookRight",Scale=1.000000,Key=MouseX)
-+AxisMappings=(AxisName="ForwardSpeedUp",Scale=1.000000,Key=U)
-+AxisMappings=(AxisName="TurnSpeedUp",Scale=1.000000,Key=Y)
-+AxisMappings=(AxisName="ForwardSpeedUp",Scale=-1.000000,Key=J)
-+AxisMappings=(AxisName="TurnSpeedUp",Scale=-1.000000,Key=H)
++AxisMappings=(AxisName="ForwardSpeedUp",Scale=1.000000,Key=E)
++AxisMappings=(AxisName="TurnSpeedUp",Scale=1.000000,Key=R)
++AxisMappings=(AxisName="ForwardSpeedUp",Scale=-1.000000,Key=C)
++AxisMappings=(AxisName="TurnSpeedUp",Scale=-1.000000,Key=V)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
