--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -44,7 +44,7 @@ SoundCueCookQualityIndex=-1
 r.GenerateMeshDistanceFields=True
 r.DynamicGlobalIlluminationMethod=1
 r.ReflectionMethod=1
-r.Shadow.Virtual.Enable=1
+r.Shadow.Virtual.Enable=0
 r.AllowGlobalClipPlane=True
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
@@ -71,5 +71,5 @@ bUseManualIPAddress=False
 ManualIPAddress=
 
 [/Script/Engine.PhysicsSettings]
-SolverOptions=(Iterations=16,CollisionPairIterations=1,PushOutIterations=1,CollisionPushOutPairIterations=1,CollisionMarginFraction=0.050000,CollisionMarginMax=10.000000,CollisionCullDistance=3.000000,CollisionMaxPushOutVelocity=1000.000000,JointPairIterations=1,JointPushOutPairIterations=1,ClusterConnectionFactor=1.000000,ClusterUnionConnectionType=DelaunayTriangulation,bGenerateCollisionData=False,CollisionFilterSettings=(FilterEnabled=False,MinMass=0.000000,MinSpeed=0.000000,MinImpulse=0.000000),bGenerateBreakData=False,BreakingFilterSettings=(FilterEnabled=False,MinMass=0.000000,MinSpeed=0.000000,MinVolume=0.000000),bGenerateTrailingData=False,TrailingFilterSettings=(FilterEnabled=False,MinMass=0.000000,MinSpeed=0.000000,MinVolume=0.000000),bGenerateContactGraph=True)
+SolverOptions=(PositionIterations=8,VelocityIterations=1,ProjectionIterations=1,CollisionMarginFraction=0.100000,CollisionMarginMax=20.000000,CollisionCullDistance=3.000000,CollisionMaxPushOutVelocity=1000.000000,ClusterConnectionFactor=1.000000,ClusterUnionConnectionType=DelaunayTriangulation,bGenerateCollisionData=False,CollisionFilterSettings=(FilterEnabled=False,MinMass=0.000000,MinSpeed=0.000000,MinImpulse=0.000000),bGenerateBreakData=False,BreakingFilterSettings=(FilterEnabled=False,MinMass=0.000000,MinSpeed=0.000000,MinVolume=0.000000),bGenerateTrailingData=False,TrailingFilterSettings=(FilterEnabled=False,MinMass=0.000000,MinSpeed=0.000000,MinVolume=0.000000))
 
