Fix camera setting

--- a/LeoRoverUE5.uproject
+++ b/LeoRoverUE5.uproject
@@ -18,5 +18,13 @@
 				"Editor"
 			]
 		}
+	],
+	"TargetPlatforms": [
+		"HoloLens",
+		"IOS",
+		"Linux",
+		"LinuxArm64",
+		"Mac",
+		"Windows"
 	]
 }
